@@ -115,9 +115,8 @@ availability of two experimental Just-In-Time (JIT) interpreters for GCJ based
 on <a href="http://www.southern-storm.com.au/libjit.html">libjit</a> and <a
 href="http://llvm.org/">LLVM</a> respectively. The source code for these
 JITs is available via the &quot;gcj-jit&quot; module of the <a
-href="http://sources.redhat.com/rhug/source.html">rhug CVS repository</a> (<a
-href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/gcj-jit/?cvsroot=rhug">CVSweb
-interface</a>).</dd>
+href="http://sourceware.org/rhug/">rhug</a> repository.
+</dd>
 
 <dt>April 4, 2006</dt>
 <dd><code>fastjar</code> has been removed from the GCC source tree and made into
