@@ -1,5 +1,9 @@
 2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* index.html: Update reference to rhug (and consolidate links).
+
+2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>
+	
 	* build-snapshot.html: Refer to GNU/Linux, simplify link to
 	installation documentation, remove reference to an old FAQ,
 	some editorial changes.
